--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^4.18.1",
+    "axios": "^1.2.0",
     "daisyui": "^2.42.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
